[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Box.gd" type="Script" id=1]
[ext_resource path="res://assets/Images/box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.4059, 24.8674 )

[node name="Box" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -25, 20 )
enabled = true
cast_to = Vector2( -15, 0 )
collision_mask = 10

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 25, 20 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 10

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2( 0, 25 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 10
